adjusted some codes